[package]
name = "dorf-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../crates/bevy", default-features = false, version = "0.10.1"}
 # Indirect dependency through bevy. Allow it to pick.
glam = { features = ["fast-math"], version = "*"}
# Rely on bevy's version
bytemuck = "*"
crossterm = "0.26.1"
log = "0.4.17"
log4rs = "1.2.0"
once_cell = "1.17.1"
shutdown_hooks = "0.1.0"
signal-hook = "0.3.15"
fastrand = "1.9.0"
ordered-float = "3.7.0"
thiserror = "1.0.40"

[features]
default = ["no_expensive_assertions"]
no_expensive_assertions = []

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3